update with 57 changes

--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -48,17 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<hr/>
+<div class="content-container">
+<div class="left-empty">
 </div>
 <section class="content">
 <header>
@@ -68,12 +60,12 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org7cc3c37">단축키</a>
+<li><a href="#org7ececce">단축키</a>
 <ul>
-<li><a href="#org22fa532">프로젝트(Project)</a></li>
-<li><a href="#org38cfd41">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#org6e010a0">타임라인(Timeline)</a></li>
-<li><a href="#orgc6d7ae2">플레이(Play or Preview)</a></li>
+<li><a href="#orgbd0d610">프로젝트(Project)</a></li>
+<li><a href="#orgd9f2ef5">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#org1b94efe">타임라인(Timeline)</a></li>
+<li><a href="#orga2d3697">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -85,13 +77,13 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-org7cc3c37" class="outline-2">
-<h2 id="org7cc3c37">단축키</h2>
-<div class="outline-text-2" id="text-org7cc3c37">
+<div id="outline-container-org7ececce" class="outline-2">
+<h2 id="org7ececce">단축키</h2>
+<div class="outline-text-2" id="text-org7ececce">
 </div>
-<div id="outline-container-org22fa532" class="outline-3">
-<h3 id="org22fa532">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org22fa532">
+<div id="outline-container-orgbd0d610" class="outline-3">
+<h3 id="orgbd0d610">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-orgbd0d610">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -100,9 +92,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org38cfd41" class="outline-3">
-<h3 id="org38cfd41">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-org38cfd41">
+<div id="outline-container-orgd9f2ef5" class="outline-3">
+<h3 id="orgd9f2ef5">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-orgd9f2ef5">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -117,9 +109,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org6e010a0" class="outline-3">
-<h3 id="org6e010a0">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-org6e010a0">
+<div id="outline-container-org1b94efe" class="outline-3">
+<h3 id="org1b94efe">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-org1b94efe">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -144,9 +136,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgc6d7ae2" class="outline-3">
-<h3 id="orgc6d7ae2">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-orgc6d7ae2">
+<div id="outline-container-orga2d3697" class="outline-3">
+<h3 id="orga2d3697">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-orga2d3697">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
@@ -169,7 +161,8 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<div class="backlinks-container">
+</div>
+<hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
@@ -179,18 +172,7 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </div>
 </div>
 </div>
-<div class="bottom-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle bottom-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
