--- a/note/find.html
+++ b/note/find.html
@@ -48,17 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<hr/>
+<div class="content-container">
+<div class="left-empty">
 </div>
 <section class="content">
 <header>
@@ -68,14 +60,14 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgcd985a4">기본 사용법</a>
+<li><a href="#orge58a9b0">기본 사용법</a>
 <ul>
-<li><a href="#orgd4f84b5">현재 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#orgc2f2677">특정 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org86bc75e">검색 패턴</a></li>
-<li><a href="#org07e3ceb">대소문자 무시하기</a></li>
-<li><a href="#org01934e8">검색 종류 지정하기</a></li>
-<li><a href="#org27ad5af">검색 내용으로 특정 처리하기(exec)</a></li>
+<li><a href="#orga3a4008">현재 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#orga17eb3f">특정 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org22ef5ef">검색 패턴</a></li>
+<li><a href="#org2c16f47">대소문자 무시하기</a></li>
+<li><a href="#org1361148">검색 종류 지정하기</a></li>
+<li><a href="#org6d70abb">검색 내용으로 특정 처리하기(exec)</a></li>
 </ul>
 </li>
 </ul>
@@ -86,13 +78,13 @@ gtag('config', 'UA-44534026-1');
 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orgcd985a4" class="outline-2">
-<h2 id="orgcd985a4">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgcd985a4">
+<div id="outline-container-orge58a9b0" class="outline-2">
+<h2 id="orge58a9b0">기본 사용법</h2>
+<div class="outline-text-2" id="text-orge58a9b0">
 </div>
-<div id="outline-container-orgd4f84b5" class="outline-3">
-<h3 id="orgd4f84b5">현재 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-orgd4f84b5">
+<div id="outline-container-orga3a4008" class="outline-3">
+<h3 id="orga3a4008">현재 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-orga3a4008">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> . -name <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -104,9 +96,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgc2f2677" class="outline-3">
-<h3 id="orgc2f2677">특정 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-orgc2f2677">
+<div id="outline-container-orga17eb3f" class="outline-3">
+<h3 id="orga17eb3f">특정 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-orga17eb3f">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> /foo/bar <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -116,9 +108,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org86bc75e" class="outline-3">
-<h3 id="org86bc75e">검색 패턴</h3>
-<div class="outline-text-3" id="text-org86bc75e">
+<div id="outline-container-org22ef5ef" class="outline-3">
+<h3 id="org22ef5ef">검색 패턴</h3>
+<div class="outline-text-3" id="text-org22ef5ef">
 <p>
 찾을 패턴으로 와일드카드를 사용할 수도 있다.
 </p>
@@ -131,9 +123,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org07e3ceb" class="outline-3">
-<h3 id="org07e3ceb">대소문자 무시하기</h3>
-<div class="outline-text-3" id="text-org07e3ceb">
+<div id="outline-container-org2c16f47" class="outline-3">
+<h3 id="org2c16f47">대소문자 무시하기</h3>
+<div class="outline-text-3" id="text-org2c16f47">
 <p>
 기본적으로 이 도구는 대소문자를 가린다.
 만약 대소문자를 가리지 않으려면 <code>iname</code> 옵션을 사용할 수 있다.
@@ -144,9 +136,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org01934e8" class="outline-3">
-<h3 id="org01934e8">검색 종류 지정하기</h3>
-<div class="outline-text-3" id="text-org01934e8">
+<div id="outline-container-org1361148" class="outline-3">
+<h3 id="org1361148">검색 종류 지정하기</h3>
+<div class="outline-text-3" id="text-org1361148">
 <p>
 만약 특정한 종류만 검색하고 싶다면 <code>type</code> 옵션을 사용할 수 있다.
 </p>
@@ -164,9 +156,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org27ad5af" class="outline-3">
-<h3 id="org27ad5af">검색 내용으로 특정 처리하기(exec)</h3>
-<div class="outline-text-3" id="text-org27ad5af">
+<div id="outline-container-org6d70abb" class="outline-3">
+<h3 id="org6d70abb">검색 내용으로 특정 처리하기(exec)</h3>
+<div class="outline-text-3" id="text-org6d70abb">
 <p>
 <code>-exec</code> 옵션은 검색된 내용을 이용해 외부 도구를 실행시킬 수 있게 할 수 있다.
 </p>
@@ -195,9 +187,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </section>
-<div class="bottom-ad-container">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle bottom-ad"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -207,6 +199,8 @@ gtag('config', 'UA-44534026-1');
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</div>
+<hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
