--- a/note/flutter.html
+++ b/note/flutter.html
@@ -48,17 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<hr/>
+<div class="content-container">
+<div class="left-empty">
 </div>
 <section class="content">
 <header>
@@ -68,10 +60,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga9f4a9c">문제 해결</a>
+<li><a href="#org67b78dd">문제 해결</a>
 <ul>
-<li><a href="#orgb2dbca1">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#org89e6203">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#orgf774341">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#orgf009bfe">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -87,13 +79,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-orga9f4a9c" class="outline-2">
-<h2 id="orga9f4a9c">문제 해결</h2>
-<div class="outline-text-2" id="text-orga9f4a9c">
+<div id="outline-container-org67b78dd" class="outline-2">
+<h2 id="org67b78dd">문제 해결</h2>
+<div class="outline-text-2" id="text-org67b78dd">
 </div>
-<div id="outline-container-orgb2dbca1" class="outline-3">
-<h3 id="orgb2dbca1">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-orgb2dbca1">
+<div id="outline-container-orgf774341" class="outline-3">
+<h3 id="orgf774341">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-orgf774341">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -126,9 +118,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-org89e6203" class="outline-3">
-<h3 id="org89e6203">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-org89e6203">
+<div id="outline-container-orgf009bfe" class="outline-3">
+<h3 id="orgf009bfe">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-orgf009bfe">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
@@ -164,9 +156,9 @@ was built for iOS. (in target 'Runner' from project 'Runner')
 </div>
 </div>
 </section>
-<div class="bottom-ad-container">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle bottom-ad"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -176,6 +168,8 @@ was built for iOS. (in target 'Runner' from project 'Runner')
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</div>
+<hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
