--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -48,17 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<hr/>
+<div class="content-container">
+<div class="left-empty">
 </div>
 <section class="content">
 <header>
@@ -68,22 +60,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge410ebe">기본 사용법</a>
+<li><a href="#org39febbb">기본 사용법</a>
 <ul>
-<li><a href="#org2fdf748">패키지 검색</a></li>
-<li><a href="#org0efeb8f">패키지 정보</a></li>
-<li><a href="#orgbc5c250">패키지 설치</a></li>
-<li><a href="#orgeaf2b51">만료된 버전 확인</a></li>
-<li><a href="#orgc4ce260">패키지 업그레이드</a></li>
-<li><a href="#org3ddecc5">구 버전 삭제하기</a></li>
-<li><a href="#orgadddea9">패키지 삭제(uninstall)</a></li>
-<li><a href="#orga43b177">의사 양반(?)</a></li>
+<li><a href="#org4dacee6">패키지 검색</a></li>
+<li><a href="#org3f55402">패키지 정보</a></li>
+<li><a href="#org8ac3f85">패키지 설치</a></li>
+<li><a href="#orge77b5c7">만료된 버전 확인</a></li>
+<li><a href="#org343daaf">패키지 업그레이드</a></li>
+<li><a href="#orga7ac764">구 버전 삭제하기</a></li>
+<li><a href="#org78fd9fa">패키지 삭제(uninstall)</a></li>
+<li><a href="#orge61427e">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#orgf229a54">구 버전 패키지 사용하기</a></li>
-<li><a href="#orgf1d754a">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#orgc77b668">Cask</a></li>
-<li><a href="#orgf71950a">외부 링크</a></li>
+<li><a href="#org5be69b1">구 버전 패키지 사용하기</a></li>
+<li><a href="#org04a6b5b">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#orgad5e7c2">Cask</a></li>
+<li><a href="#org06ac1eb">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -94,31 +86,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-orge410ebe" class="outline-2">
-<h2 id="orge410ebe">기본 사용법</h2>
-<div class="outline-text-2" id="text-orge410ebe">
+<div id="outline-container-org39febbb" class="outline-2">
+<h2 id="org39febbb">기본 사용법</h2>
+<div class="outline-text-2" id="text-org39febbb">
 </div>
-<div id="outline-container-org2fdf748" class="outline-3">
-<h3 id="org2fdf748">패키지 검색</h3>
-<div class="outline-text-3" id="text-org2fdf748">
+<div id="outline-container-org4dacee6" class="outline-3">
+<h3 id="org4dacee6">패키지 검색</h3>
+<div class="outline-text-3" id="text-org4dacee6">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org0efeb8f" class="outline-3">
-<h3 id="org0efeb8f">패키지 정보</h3>
-<div class="outline-text-3" id="text-org0efeb8f">
+<div id="outline-container-org3f55402" class="outline-3">
+<h3 id="org3f55402">패키지 정보</h3>
+<div class="outline-text-3" id="text-org3f55402">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgbc5c250" class="outline-3">
-<h3 id="orgbc5c250">패키지 설치</h3>
-<div class="outline-text-3" id="text-orgbc5c250">
+<div id="outline-container-org8ac3f85" class="outline-3">
+<h3 id="org8ac3f85">패키지 설치</h3>
+<div class="outline-text-3" id="text-org8ac3f85">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -129,9 +121,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgeaf2b51" class="outline-3">
-<h3 id="orgeaf2b51">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-orgeaf2b51">
+<div id="outline-container-orge77b5c7" class="outline-3">
+<h3 id="orge77b5c7">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-orge77b5c7">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -143,9 +135,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orgc4ce260" class="outline-3">
-<h3 id="orgc4ce260">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-orgc4ce260">
+<div id="outline-container-org343daaf" class="outline-3">
+<h3 id="org343daaf">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-org343daaf">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -159,9 +151,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org3ddecc5" class="outline-3">
-<h3 id="org3ddecc5">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-org3ddecc5">
+<div id="outline-container-orga7ac764" class="outline-3">
+<h3 id="orga7ac764">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-orga7ac764">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -175,18 +167,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-orgadddea9" class="outline-3">
-<h3 id="orgadddea9">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-orgadddea9">
+<div id="outline-container-org78fd9fa" class="outline-3">
+<h3 id="org78fd9fa">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-org78fd9fa">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orga43b177" class="outline-3">
-<h3 id="orga43b177">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-orga43b177">
+<div id="outline-container-orge61427e" class="outline-3">
+<h3 id="orge61427e">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-orge61427e">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -197,9 +189,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orgf229a54" class="outline-2">
-<h2 id="orgf229a54">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-orgf229a54">
+<div id="outline-container-org5be69b1" class="outline-2">
+<h2 id="org5be69b1">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-org5be69b1">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -214,9 +206,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-orgf1d754a" class="outline-2">
-<h2 id="orgf1d754a">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-orgf1d754a">
+<div id="outline-container-org04a6b5b" class="outline-2">
+<h2 id="org04a6b5b">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-org04a6b5b">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -319,9 +311,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgc77b668" class="outline-2">
-<h2 id="orgc77b668">Cask</h2>
-<div class="outline-text-2" id="text-orgc77b668">
+<div id="outline-container-orgad5e7c2" class="outline-2">
+<h2 id="orgad5e7c2">Cask</h2>
+<div class="outline-text-2" id="text-orgad5e7c2">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -355,9 +347,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-orgf71950a" class="outline-2">
-<h2 id="orgf71950a">외부 링크</h2>
-<div class="outline-text-2" id="text-orgf71950a">
+<div id="outline-container-org06ac1eb" class="outline-2">
+<h2 id="org06ac1eb">외부 링크</h2>
+<div class="outline-text-2" id="text-org06ac1eb">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
@@ -376,7 +368,8 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<div class="backlinks-container">
+</div>
+<hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
@@ -414,18 +407,7 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </div>
 </div>
 </div>
-<div class="bottom-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle bottom-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
