--- a/note/seorenn.html
+++ b/note/seorenn.html
@@ -48,17 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<hr/>
+<div class="content-container">
+<div class="left-empty">
 </div>
 <section class="content">
 <header>
@@ -92,9 +84,9 @@ Java와 C++은 아주 혐오하는 것 같다.
 기타 고전 건축이나 기둥에 흥분하는 변태 같다.
 </p>
 
-<div id="outline-container-org1953a61" class="outline-2">
-<h2 id="org1953a61">외부 링크</h2>
-<div class="outline-text-2" id="text-org1953a61">
+<div id="outline-container-orgfaa8da2" class="outline-2">
+<h2 id="orgfaa8da2">외부 링크</h2>
+<div class="outline-text-2" id="text-orgfaa8da2">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/seorenn">🌏GitHub</a></li>
 <li><a target="_blank" href="https://twitter.com/seorenn">🌏Twitter</a></li>
@@ -107,9 +99,9 @@ Java와 C++은 아주 혐오하는 것 같다.
 </div>
 </div>
 </section>
-<div class="bottom-ad-container">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle bottom-ad"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -119,6 +111,8 @@ Java와 C++은 아주 혐오하는 것 같다.
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</div>
+<hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
