--- a/note/dockerfile.html
+++ b/note/dockerfile.html
@@ -48,17 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<hr/>
+<div class="content-container">
+<div class="left-empty">
 </div>
 <section class="content">
 <header>
@@ -68,10 +60,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org9803c1b">평범한 스펙 예제</a></li>
-<li><a href="#orgcc55da7">사용자 지정</a></li>
-<li><a href="#org45be957">Health Checking</a></li>
-<li><a href="#org6c2586a">Multi Stage Building</a></li>
+<li><a href="#org830f790">평범한 스펙 예제</a></li>
+<li><a href="#org8f36553">사용자 지정</a></li>
+<li><a href="#org1031a28">Health Checking</a></li>
+<li><a href="#orgd711379">Multi Stage Building</a></li>
 </ul>
 </div>
 </div>
@@ -80,9 +72,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 특수한 DSL 스크립트 언어로 작성하는 스펙 파일이다.
 </p>
 
-<div id="outline-container-org9803c1b" class="outline-2">
-<h2 id="org9803c1b">평범한 스펙 예제</h2>
-<div class="outline-text-2" id="text-org9803c1b">
+<div id="outline-container-org830f790" class="outline-2">
+<h2 id="org830f790">평범한 스펙 예제</h2>
+<div class="outline-text-2" id="text-org830f790">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">FROM</span> <span style="color: #ECBE7B; font-weight: bold;">debian:buster</span>
 
@@ -127,9 +119,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </p>
 </div>
 </div>
-<div id="outline-container-orgcc55da7" class="outline-2">
-<h2 id="orgcc55da7">사용자 지정</h2>
-<div class="outline-text-2" id="text-orgcc55da7">
+<div id="outline-container-org8f36553" class="outline-2">
+<h2 id="org8f36553">사용자 지정</h2>
+<div class="outline-text-2" id="text-org8f36553">
 <p>
 특정 사용자로 굴리고(?) 싶다면 <code>USER</code> 커맨드를 쓸 수 있다.
 </p>
@@ -144,9 +136,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </p>
 </div>
 </div>
-<div id="outline-container-org45be957" class="outline-2">
-<h2 id="org45be957">Health Checking</h2>
-<div class="outline-text-2" id="text-org45be957">
+<div id="outline-container-org1031a28" class="outline-2">
+<h2 id="org1031a28">Health Checking</h2>
+<div class="outline-text-2" id="text-org1031a28">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">HEALTHCHECK</span> --<span style="color: #dcaeea;">interval</span>=5s <span style="color: #98be65;">\</span>
             --<span style="color: #dcaeea;">timeout</span>=5s <span style="color: #98be65;">\</span>
@@ -156,9 +148,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </div>
 </div>
 </div>
-<div id="outline-container-org6c2586a" class="outline-2">
-<h2 id="org6c2586a">Multi Stage Building</h2>
-<div class="outline-text-2" id="text-org6c2586a">
+<div id="outline-container-orgd711379" class="outline-2">
+<h2 id="orgd711379">Multi Stage Building</h2>
+<div class="outline-text-2" id="text-orgd711379">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">FROM</span> <span style="color: #ECBE7B; font-weight: bold;">someimage</span> AS <span style="color: #a9a1e1; font-weight: bold;">stage1</span>
 ...
@@ -186,7 +178,8 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<div class="backlinks-container">
+</div>
+<hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
@@ -203,18 +196,7 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </div>
 </div>
 </div>
-<div class="bottom-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle bottom-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
