--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -48,17 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<hr/>
+<div class="content-container">
+<div class="left-empty">
 </div>
 <section class="content">
 <header>
@@ -68,27 +60,27 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org728f838">개념 메모</a>
+<li><a href="#orgfcac55e">개념 메모</a>
 <ul>
-<li><a href="#orgb3e7b82">샤프(Sharpsign)</a></li>
-<li><a href="#org5587007">단 따옴표(Single Quote)</a></li>
-<li><a href="#orgacc8374">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
-<li><a href="#org8613c9b">apply vs funcall</a></li>
-<li><a href="#orga653692">Character</a></li>
-<li><a href="#org8e3283b">setq vs setq-default</a></li>
-<li><a href="#orgb33a889">Comma and Back-Quote</a></li>
+<li><a href="#orgc7cd18a">샤프(Sharpsign)</a></li>
+<li><a href="#orgf6d8454">단 따옴표(Single Quote)</a></li>
+<li><a href="#org89c079a">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
+<li><a href="#org75f1bbb">apply vs funcall</a></li>
+<li><a href="#orgfe37cf7">Character</a></li>
+<li><a href="#org50b12ec">setq vs setq-default</a></li>
+<li><a href="#org4279f54">Comma and Back-Quote</a></li>
 </ul>
 </li>
-<li><a href="#org295ec54">코드 예제</a>
+<li><a href="#orge4b7aaa">코드 예제</a>
 <ul>
-<li><a href="#org4aa7b55">타입 변환</a></li>
-<li><a href="#orgd9fe491">셸 커맨드</a></li>
+<li><a href="#org5491d90">타입 변환</a></li>
+<li><a href="#org7a5a2af">셸 커맨드</a></li>
 </ul>
 </li>
-<li><a href="#orge130ac9">에러 노트</a>
+<li><a href="#orgb5b0949">에러 노트</a>
 <ul>
-<li><a href="#org070fbf7">commandp</a></li>
-<li><a href="#org23ec0c6">안 쓰는 매개변수</a></li>
+<li><a href="#org96c7fa5">commandp</a></li>
+<li><a href="#org813d20d">안 쓰는 매개변수</a></li>
 </ul>
 </li>
 </ul>
@@ -101,13 +93,13 @@ Lisp 언어를 의미한다.
 형태라서 Lisp이 아니라고 하기에도 좀 미묘하긴 하다.
 </p>
 
-<div id="outline-container-org728f838" class="outline-2">
-<h2 id="org728f838">개념 메모</h2>
-<div class="outline-text-2" id="text-org728f838">
+<div id="outline-container-orgfcac55e" class="outline-2">
+<h2 id="orgfcac55e">개념 메모</h2>
+<div class="outline-text-2" id="text-orgfcac55e">
 </div>
-<div id="outline-container-orgb3e7b82" class="outline-3">
-<h3 id="orgb3e7b82">샤프(Sharpsign)</h3>
-<div class="outline-text-3" id="text-orgb3e7b82">
+<div id="outline-container-orgc7cd18a" class="outline-3">
+<h3 id="orgc7cd18a">샤프(Sharpsign)</h3>
+<div class="outline-text-3" id="text-orgc7cd18a">
 <p>
 <code>#</code> (Sharpsign) 은 s-expressions 특수 문법이다.
 근데 뭔 소린지 하나도 모르겠다.
@@ -127,9 +119,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org5587007" class="outline-3">
-<h3 id="org5587007">단 따옴표(Single Quote)</h3>
-<div class="outline-text-3" id="text-org5587007">
+<div id="outline-container-orgf6d8454" class="outline-3">
+<h3 id="orgf6d8454">단 따옴표(Single Quote)</h3>
+<div class="outline-text-3" id="text-orgf6d8454">
 <p>
 단 따옴표 <code>'</code> (혹은 quote 함수)는 식을 그대로 표현할 때 사용한다.
 예를 들어 <code>(1 2 3)</code> 이라는 리스트를 메시지로 출력하고 싶어서
@@ -170,9 +162,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgacc8374" class="outline-3">
-<h3 id="orgacc8374">샤프 단 따옴표(Sharpsign Single Quote)</h3>
-<div class="outline-text-3" id="text-orgacc8374">
+<div id="outline-container-org89c079a" class="outline-3">
+<h3 id="org89c079a">샤프 단 따옴표(Sharpsign Single Quote)</h3>
+<div class="outline-text-3" id="text-org89c079a">
 <p>
 <code>#'function-name</code> 의 의미는
 <code>(function function-name)</code> 을 줄여서 표기한 것이다.
@@ -194,9 +186,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org8613c9b" class="outline-3">
-<h3 id="org8613c9b">apply vs funcall</h3>
-<div class="outline-text-3" id="text-org8613c9b">
+<div id="outline-container-org75f1bbb" class="outline-3">
+<h3 id="org75f1bbb">apply vs funcall</h3>
+<div class="outline-text-3" id="text-org75f1bbb">
 <p>
 위에서 본 <code>funcall</code> 과 비슷하게 <code>apply</code> 라는 것도 있다.
 사용 방법도 거의 동일하다.
@@ -230,9 +222,9 @@ Lisp 언어를 의미한다.
 </div>
 </div>
 </div>
-<div id="outline-container-orga653692" class="outline-3">
-<h3 id="orga653692">Character</h3>
-<div class="outline-text-3" id="text-orga653692">
+<div id="outline-container-orgfe37cf7" class="outline-3">
+<h3 id="orgfe37cf7">Character</h3>
+<div class="outline-text-3" id="text-orgfe37cf7">
 <p>
 <a href="emacs.html">Emacs</a>에서 문자는 ASCII 번호로 표현된다.
 즉 숫자다.
@@ -248,9 +240,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org8e3283b" class="outline-3">
-<h3 id="org8e3283b">setq vs setq-default</h3>
-<div class="outline-text-3" id="text-org8e3283b">
+<div id="outline-container-org50b12ec" class="outline-3">
+<h3 id="org50b12ec">setq vs setq-default</h3>
+<div class="outline-text-3" id="text-org50b12ec">
 <p>
 <a href="emacs.html">Emacs</a>에는 버퍼 로컬 변수라는 개념이 있다. 예를 들자면
 <code>tab-width</code> 가 대표적인데, 각 버퍼의 메이저 모드마다 이 변수의 값이 다 다를 수
@@ -268,9 +260,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgb33a889" class="outline-3">
-<h3 id="orgb33a889">Comma and Back-Quote</h3>
-<div class="outline-text-3" id="text-orgb33a889">
+<div id="outline-container-org4279f54" class="outline-3">
+<h3 id="org4279f54">Comma and Back-Quote</h3>
+<div class="outline-text-3" id="text-org4279f54">
 <div class="org-src-container">
 <pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #51afef;">setq</span> a <span style="color: #98be65;">"a's value"</span> b <span style="color: #98be65;">"b's value"</span> c <span style="color: #98be65;">"c's value"</span><span style="color: #51afef;">)</span>
 <span style="color: #51afef;">'</span><span style="color: #51afef;">(</span>a  b  c<span style="color: #51afef;">)</span>      <span style="color: #5B6268;">; </span><span style="color: #5B6268;">=&gt; (a b c)</span>
@@ -285,13 +277,13 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-org295ec54" class="outline-2">
-<h2 id="org295ec54">코드 예제</h2>
-<div class="outline-text-2" id="text-org295ec54">
+<div id="outline-container-orge4b7aaa" class="outline-2">
+<h2 id="orge4b7aaa">코드 예제</h2>
+<div class="outline-text-2" id="text-orge4b7aaa">
 </div>
-<div id="outline-container-org4aa7b55" class="outline-3">
-<h3 id="org4aa7b55">타입 변환</h3>
-<div class="outline-text-3" id="text-org4aa7b55">
+<div id="outline-container-org5491d90" class="outline-3">
+<h3 id="org5491d90">타입 변환</h3>
+<div class="outline-text-3" id="text-org5491d90">
 <p>
 숫자(정수 및 실수)와 문자열 간의 전환 두 가지 예제다.
 </p>
@@ -309,9 +301,9 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </p>
 </div>
 </div>
-<div id="outline-container-orgd9fe491" class="outline-3">
-<h3 id="orgd9fe491"><a href="shell.html">셸</a> 커맨드</h3>
-<div class="outline-text-3" id="text-orgd9fe491">
+<div id="outline-container-org7a5a2af" class="outline-3">
+<h3 id="org7a5a2af"><a href="shell.html">셸</a> 커맨드</h3>
+<div class="outline-text-3" id="text-org7a5a2af">
 <p>
 <a href="shell.html">셸</a> 커맨드를 실행시키기 위해 대충 두 가지 함수가 있다.
 </p>
@@ -339,13 +331,13 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-orge130ac9" class="outline-2">
-<h2 id="orge130ac9">에러 노트</h2>
-<div class="outline-text-2" id="text-orge130ac9">
+<div id="outline-container-orgb5b0949" class="outline-2">
+<h2 id="orgb5b0949">에러 노트</h2>
+<div class="outline-text-2" id="text-orgb5b0949">
 </div>
-<div id="outline-container-org070fbf7" class="outline-3">
-<h3 id="org070fbf7">commandp</h3>
-<div class="outline-text-3" id="text-org070fbf7">
+<div id="outline-container-org96c7fa5" class="outline-3">
+<h3 id="org96c7fa5">commandp</h3>
+<div class="outline-text-3" id="text-org96c7fa5">
 <blockquote>
 <p>
 Wrong type argument: commandp, your-function
@@ -365,9 +357,9 @@ Wrong type argument: commandp, your-function
 </div>
 </div>
 </div>
-<div id="outline-container-org23ec0c6" class="outline-3">
-<h3 id="org23ec0c6">안 쓰는 매개변수</h3>
-<div class="outline-text-3" id="text-org23ec0c6">
+<div id="outline-container-org813d20d" class="outline-3">
+<h3 id="org813d20d">안 쓰는 매개변수</h3>
+<div class="outline-text-3" id="text-org813d20d">
 <p>
 예를 들어 아래와 같은 코드에서
 </p>
@@ -412,7 +404,8 @@ Unused lexical argument 'bar'
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<div class="backlinks-container">
+</div>
+<hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
@@ -429,18 +422,7 @@ Unused lexical argument 'bar'
 </div>
 </div>
 </div>
-<div class="bottom-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle bottom-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
