--- a/note/macos.html
+++ b/note/macos.html
@@ -48,17 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<hr/>
+<div class="content-container">
+<div class="left-empty">
 </div>
 <section class="content">
 <header>
@@ -68,9 +60,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org940bc71">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org488e085">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org857f526">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org1526dad">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgcdbc7e3">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org31d1a6a">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -95,17 +87,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org940bc71" class="outline-2">
-<h2 id="org940bc71">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org940bc71">
+<div id="outline-container-org1526dad" class="outline-2">
+<h2 id="org1526dad">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org1526dad">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org488e085" class="outline-2">
-<h2 id="org488e085">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org488e085">
+<div id="outline-container-orgcdbc7e3" class="outline-2">
+<h2 id="orgcdbc7e3">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgcdbc7e3">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -125,9 +117,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org857f526" class="outline-2">
-<h2 id="org857f526">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org857f526">
+<div id="outline-container-org31d1a6a" class="outline-2">
+<h2 id="org31d1a6a">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org31d1a6a">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -157,7 +149,8 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<div class="backlinks-container">
+</div>
+<hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
@@ -300,18 +293,7 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </div>
 </div>
 </div>
-<div class="bottom-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle bottom-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
