--- a/note/magit.html
+++ b/note/magit.html
@@ -48,17 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<hr/>
+<div class="content-container">
+<div class="left-empty">
 </div>
 <section class="content">
 <header>
@@ -68,16 +60,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org5259fcd">magit-status</a></li>
-<li><a href="#orgca3f483">Stage</a></li>
-<li><a href="#orgfcfa363">Commit</a></li>
-<li><a href="#org3ae93f4">Log</a></li>
-<li><a href="#orgf313387">Push</a></li>
-<li><a href="#org2f038d9">Pull</a></li>
-<li><a href="#orgf06c27b">Branch</a></li>
-<li><a href="#org0da1285">Reset or Revert</a></li>
-<li><a href="#orga124407">기타</a></li>
-<li><a href="#org73a8271">외부 링크</a></li>
+<li><a href="#orga424da0">magit-status</a></li>
+<li><a href="#orgb5b0563">Stage</a></li>
+<li><a href="#orgf6a5b45">Commit</a></li>
+<li><a href="#orgcd15e04">Log</a></li>
+<li><a href="#org1efe8df">Push</a></li>
+<li><a href="#orgff01b55">Pull</a></li>
+<li><a href="#org8198c5e">Branch</a></li>
+<li><a href="#orga2552c3">Reset or Revert</a></li>
+<li><a href="#org24515d3">기타</a></li>
+<li><a href="#orgb612eed">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -98,9 +90,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-org5259fcd" class="outline-2">
-<h2 id="org5259fcd">magit-status</h2>
-<div class="outline-text-2" id="text-org5259fcd">
+<div id="outline-container-orga424da0" class="outline-2">
+<h2 id="orga424da0">magit-status</h2>
+<div class="outline-text-2" id="text-orga424da0">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -122,9 +114,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgca3f483" class="outline-2">
-<h2 id="orgca3f483">Stage</h2>
-<div class="outline-text-2" id="text-orgca3f483">
+<div id="outline-container-orgb5b0563" class="outline-2">
+<h2 id="orgb5b0563">Stage</h2>
+<div class="outline-text-2" id="text-orgb5b0563">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -137,9 +129,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgfcfa363" class="outline-2">
-<h2 id="orgfcfa363">Commit</h2>
-<div class="outline-text-2" id="text-orgfcfa363">
+<div id="outline-container-orgf6a5b45" class="outline-2">
+<h2 id="orgf6a5b45">Commit</h2>
+<div class="outline-text-2" id="text-orgf6a5b45">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -155,9 +147,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org3ae93f4" class="outline-2">
-<h2 id="org3ae93f4">Log</h2>
-<div class="outline-text-2" id="text-org3ae93f4">
+<div id="outline-container-orgcd15e04" class="outline-2">
+<h2 id="orgcd15e04">Log</h2>
+<div class="outline-text-2" id="text-orgcd15e04">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -167,25 +159,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgf313387" class="outline-2">
-<h2 id="orgf313387">Push</h2>
-<div class="outline-text-2" id="text-orgf313387">
+<div id="outline-container-org1efe8df" class="outline-2">
+<h2 id="org1efe8df">Push</h2>
+<div class="outline-text-2" id="text-org1efe8df">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org2f038d9" class="outline-2">
-<h2 id="org2f038d9">Pull</h2>
-<div class="outline-text-2" id="text-org2f038d9">
+<div id="outline-container-orgff01b55" class="outline-2">
+<h2 id="orgff01b55">Pull</h2>
+<div class="outline-text-2" id="text-orgff01b55">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf06c27b" class="outline-2">
-<h2 id="orgf06c27b">Branch</h2>
-<div class="outline-text-2" id="text-orgf06c27b">
+<div id="outline-container-org8198c5e" class="outline-2">
+<h2 id="org8198c5e">Branch</h2>
+<div class="outline-text-2" id="text-org8198c5e">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -193,26 +185,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-org0da1285" class="outline-2">
-<h2 id="org0da1285">Reset or Revert</h2>
-<div class="outline-text-2" id="text-org0da1285">
+<div id="outline-container-orga2552c3" class="outline-2">
+<h2 id="orga2552c3">Reset or Revert</h2>
+<div class="outline-text-2" id="text-orga2552c3">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga124407" class="outline-2">
-<h2 id="orga124407">기타</h2>
-<div class="outline-text-2" id="text-orga124407">
+<div id="outline-container-org24515d3" class="outline-2">
+<h2 id="org24515d3">기타</h2>
+<div class="outline-text-2" id="text-org24515d3">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org73a8271" class="outline-2">
-<h2 id="org73a8271">외부 링크</h2>
-<div class="outline-text-2" id="text-org73a8271">
+<div id="outline-container-orgb612eed" class="outline-2">
+<h2 id="orgb612eed">외부 링크</h2>
+<div class="outline-text-2" id="text-orgb612eed">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
@@ -220,9 +212,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </div>
 </div>
 </section>
-<div class="bottom-ad-container">
+<div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle bottom-ad"
+<ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
@@ -232,6 +224,8 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+</div>
+<hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
