--- a/note/sh.html
+++ b/note/sh.html
@@ -48,17 +48,9 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle top-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<hr/>
+<div class="content-container">
+<div class="left-empty">
 </div>
 <section class="content">
 <header>
@@ -68,27 +60,27 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org168baec">소개</a></li>
-<li><a href="#org46f614c">스크립팅 노트</a>
+<li><a href="#org71984ff">소개</a></li>
+<li><a href="#org055a49f">스크립팅 노트</a>
 <ul>
-<li><a href="#org1b2655e">실행 가능한 스크립트</a></li>
-<li><a href="#org828df11">if</a></li>
-<li><a href="#org82896af">루프</a></li>
-<li><a href="#org2140348">조건식 오퍼레이터</a></li>
-<li><a href="#org5ef1e62">디렉토리 존재 유무 체크</a></li>
-<li><a href="#orgecd0fb0">파일 개수</a></li>
-<li><a href="#org49466b3">와일드카드 인자 처리</a></li>
-<li><a href="#org7299f20">에러가 나면 멈추게 하기</a></li>
-<li><a href="#org3e16e23">에러 메시지 숨기기</a></li>
+<li><a href="#org61faa3d">실행 가능한 스크립트</a></li>
+<li><a href="#orgb594e60">if</a></li>
+<li><a href="#orgdf0bcb3">루프</a></li>
+<li><a href="#orga5a1dd6">조건식 오퍼레이터</a></li>
+<li><a href="#org3648995">디렉토리 존재 유무 체크</a></li>
+<li><a href="#org2eaa1d2">파일 개수</a></li>
+<li><a href="#org72dbad2">와일드카드 인자 처리</a></li>
+<li><a href="#org1bb11e4">에러가 나면 멈추게 하기</a></li>
+<li><a href="#orgea5fd63">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org168baec" class="outline-2">
-<h2 id="org168baec">소개</h2>
-<div class="outline-text-2" id="text-org168baec">
+<div id="outline-container-org71984ff" class="outline-2">
+<h2 id="org71984ff">소개</h2>
+<div class="outline-text-2" id="text-org71984ff">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -97,16 +89,16 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org46f614c" class="outline-2">
-<h2 id="org46f614c">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-org46f614c">
+<div id="outline-container-org055a49f" class="outline-2">
+<h2 id="org055a49f">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-org055a49f">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-org1b2655e" class="outline-3">
-<h3 id="org1b2655e">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-org1b2655e">
+<div id="outline-container-org61faa3d" class="outline-3">
+<h3 id="org61faa3d">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-org61faa3d">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -167,9 +159,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org828df11" class="outline-3">
-<h3 id="org828df11">if</h3>
-<div class="outline-text-3" id="text-org828df11">
+<div id="outline-container-orgb594e60" class="outline-3">
+<h3 id="orgb594e60">if</h3>
+<div class="outline-text-3" id="text-orgb594e60">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -208,9 +200,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org82896af" class="outline-3">
-<h3 id="org82896af">루프</h3>
-<div class="outline-text-3" id="text-org82896af">
+<div id="outline-container-orgdf0bcb3" class="outline-3">
+<h3 id="orgdf0bcb3">루프</h3>
+<div class="outline-text-3" id="text-orgdf0bcb3">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -227,9 +219,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org2140348" class="outline-3">
-<h3 id="org2140348">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org2140348">
+<div id="outline-container-orga5a1dd6" class="outline-3">
+<h3 id="orga5a1dd6">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-orga5a1dd6">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -244,9 +236,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org5ef1e62" class="outline-3">
-<h3 id="org5ef1e62">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-org5ef1e62">
+<div id="outline-container-org3648995" class="outline-3">
+<h3 id="org3648995">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-org3648995">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -261,9 +253,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgecd0fb0" class="outline-3">
-<h3 id="orgecd0fb0">파일 개수</h3>
-<div class="outline-text-3" id="text-orgecd0fb0">
+<div id="outline-container-org2eaa1d2" class="outline-3">
+<h3 id="org2eaa1d2">파일 개수</h3>
+<div class="outline-text-3" id="text-org2eaa1d2">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -287,9 +279,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org49466b3" class="outline-3">
-<h3 id="org49466b3">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-org49466b3">
+<div id="outline-container-org72dbad2" class="outline-3">
+<h3 id="org72dbad2">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-org72dbad2">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -307,9 +299,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org7299f20" class="outline-3">
-<h3 id="org7299f20">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-org7299f20">
+<div id="outline-container-org1bb11e4" class="outline-3">
+<h3 id="org1bb11e4">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-org1bb11e4">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -319,9 +311,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org3e16e23" class="outline-3">
-<h3 id="org3e16e23">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-org3e16e23">
+<div id="outline-container-orgea5fd63" class="outline-3">
+<h3 id="orgea5fd63">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-orgea5fd63">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
@@ -345,7 +337,8 @@ than, greater than or equal, less than, less than or equal</li>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<div class="backlinks-container">
+</div>
+<hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
@@ -355,18 +348,7 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div class="bottom-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle bottom-ad"
-     style="display:block"
-     data-ad-client="ca-pub-1071465863344332"
-     data-ad-slot="4306465772"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
